# kafka

./: README.md  pyproject.toml
src/kchat/: cli.py
src/kchat/kafka/: .con.py.swp  cchat.py  chat.py  con.py  interchat.py  pchat.py  pro.py
